tests/snapshots/lexer__extended_identifiers__errors__empty_at_eof.snap
---
source: tests/lexer.rs
expression: "lex(\"@\")"
---
Err(
    LexError {
        message: "expected identifier after `@`",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
