tests/snapshots/lexer__extended_identifiers__errors__empty_before_space.snap
---
source: tests/lexer.rs
expression: "lex(\"@ foo\")"
---
Err(
    LexError {
        message: "expected identifier after `@`",
        span: Span {
            start: 0,
            end: 2,
        },
    },
)
